Fix export settings

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Builds/Boba Counter.exe"
+export_path="../../Builds/Boba Blasters.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -40,8 +40,8 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name="Meloncholy"
-application/product_name="Boba Blaster"
-application/file_description="THE BOBA BLASTER"
+application/product_name="Boba Blasters"
+application/file_description="THE BOBA BLASTERS"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
